--- a/package.json
+++ b/package.json
@@ -8,9 +8,15 @@
     "build": "tsc",
     "watch": "tsc -w",
     "test": "jest",
-    "cdk": "cdk"
+    "cdk": "cdk",
+    "format": "prettier --write \"**/*.ts\" \"test/**/*.ts\"",
+    "lint": "eslint \"{bin,lambda,lib,test,shared}/**/*.ts\" --fix"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.1.3",
     "@types/aws-lambda": "^8.10.145",
     "@types/jest": "^29.5.12",
     "@types/node": "22.5.4",
@@ -18,6 +24,9 @@
     "jest": "^29.7.0",
     "ts-jest": "^29.2.5",
     "ts-node": "^10.9.2",
+    "eslint": "^8.56.0",
+    "husky": "^4.3.8",
+    "prettier": "^3.2.5",
     "typescript": "~5.6.2"
   },
   "dependencies": {
@@ -25,5 +34,10 @@
     "axios": "^1.7.7",
     "constructs": "^10.3.0",
     "source-map-support": "^0.5.21"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "npm run format && npm run lint && npm run build"
+    }
   }
 }
