--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "npm run format && npm run lint && npm run build"
+      "pre-commit": "npm run format && npm run lint && npm run test"
     }
   }
 }
